--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Jacques+Francois&display=swap" rel="stylesheet">
+
+
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/Images/favicon/android-chrome-512x512.png" type="image/x-icon">
-  <title>Document</title>
+
+  <title>Açougue - Delicias da Carne</title>
 </head>
+
+
+
 <body>
 
   <header class="header">
