"Construção do Hero e Inicio da seção - MENU"

--- a/index.html
+++ b/index.html
@@ -41,19 +41,24 @@
         <li><a href="">Contato</a></li>
       </ul>
     </nav>
-    <i data-js="icon" class="show fa-solid fa-bars fa-4x"></i>
+    <i data-js="icon" class="fa-solid fa-bars fa-2x hidden"></i>
   </header>
 
   <main class="container">
 
     <section class="section--inicio">
-      <h2 class="section__title">DELICIAS <br> <span style="margin-left: 1rem;">DA</span> <br> CARNE</h2>
-      <div class="thumb"></div>
+      <h2 class="section__title">DELICIAS <br> DA <br> CARNE</h2>
+      <div>
+        <span class="line"></span>
+        <p class="section__text">A Boutique de Carne <br> mais prestigiada do Rio de Janeiro <br> está de volta!</p>
+        <a class="section__link"href="#menu">ACESSE NOSSO CARDÁPIO<span></span><i class="fa-solid fa-arrow-right-long" style="color: #FFFFFF;"></i></a>
+      </div>
     </section>
 
-    <section class="section--menu">
+    <section class="breakrow"></section>
+
+    <section class="section--menu" id="menu">
       <h2 class="section__title">MENU</h2>
-      <div class="thumb"></div>
       <article class="section__content">
         <div class="section--menu__menu" data-menu="menu">
           <div data-menu-item="1">BOVINA</div>
@@ -63,44 +68,46 @@
         </div>
         <div class="section--menu__itensDisplay">
           <div data-menu-item-display="1">
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
           </div>
 <!--           <div data-menu-item-display="2">
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
           </div>
           <div data-menu-item-display="3">
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
           </div>
           <div data-menu-item-display="4">
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
-            <p>Ancho ...................... R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
+            <p>Ancho <span class="line"></span> R$ 29,99</p>
           </div> -->
         </div>
       </article>
     </section>
+
+    <section class="breakrow"></section>
 
     <section class="section--sobre">
       <h2 class="section__title">SOBRE</h2>
@@ -114,6 +121,8 @@
       </article>
     </section>
 
+    <section class="breakrow"></section>
+
     <section class="section--localizacao">
       <h2 class="section__title">LOCALIZAÇÃO</h2>
       <div class="thumb"></div>
@@ -122,7 +131,7 @@
           src="https://www.bing.com/maps?&cp=-22.284073~-42.530265&lvl=16&pi=0&osid=88a21f93-96aa-4d6e-a718-ce917513ae75&v=2&sV=2&form=S00027"
           scrolling="no">
         </iframe>
-        <div style="white-space: nowrap; text-align: center; width: 500px; padding: 6px 0;">
+        <div style="white-space: nowrap; text-align: center; width: 100%; padding: 6px 0;">
           <a id="largeMapLink" target="_blank"
             href="https://www.bing.com/maps?cp=-24.99974967945576~2579.000015258789&amp;sty=r&amp;lvl=11&amp;FORM=MBEDLD">Exibir
             Mapa Grande</a> &nbsp; | &nbsp;
@@ -132,6 +141,8 @@
         </div>
       </article>
     </section>
+
+    <section class="breakrow"></section>
 
     <section class="section--contato">
       <h2 class="section__title">CONTATO</h2>
@@ -151,9 +162,6 @@
         </form>
       </article>
     </section>
-
-
-    
   </main>
 
   <footer></footer>
