Versão 0.1 Site TP - Finalização do projeto basico

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
 
 
-  <!-- CSS FILES -->  
+  <!-- CSS FILES -->
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
 
@@ -51,7 +51,8 @@
       <div>
         <span class="line"></span>
         <p class="section__text">A Boutique de Carne <br> mais prestigiada do Rio de Janeiro <br> está de volta!</p>
-        <a class="section__link"href="#menu">ACESSE NOSSO CARDÁPIO<span></span><i class="fa-solid fa-arrow-right-long" style="color: #FFFFFF;"></i></a>
+        <a class="section__link" href="#menu">ACESSE NOSSO CARDÁPIO<span></span><i class="fa-solid fa-arrow-right-long"
+            style="color: #FFFFFF;"></i></a>
       </div>
     </section>
 
@@ -61,48 +62,49 @@
       <h2 class="section__title">MENU</h2>
       <article class="section__content">
         <div class="section--menu__menu" data-menu="menu">
-          <div data-menu-item="1">BOVINA</div>
-          <div data-menu-item="2">SUINA</div>
-          <div data-menu-item="3">AVE</div>
-          <div data-menu-item="4">PEIXES</div>
+          <div data-menu-item="1" class="option" id="option1">BOVINA</div>
+          <div data-menu-item="2" class="option" id="option2">SUINA</div>
+          <div data-menu-item="3" class="option" id="option3">AVE</div>
+          <div data-menu-item="4" class="option" id="option4">PEIXES</div>
         </div>
         <div class="section--menu__itensDisplay">
-          <div data-menu-item-display="1">
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
+          <div data-menu-item-display="1" class="card" id="card1">
+            <p>Filé Mignon <span class="line"></span> R$ 60/kg</p>
+            <p>Picanha <span class="line"></span> R$ 50/kg</p>
+            <p>Alcatra <span class="line"></span> R$ 40/kg</p>
+            <p>Contrafilé <span class="line"></span> R$ 45/kg</p>
+            <p>Coxão mole <span class="line"></span> R$ 35/kg</p>
+            <p>Patinho <span class="line"></span> R$ 30/kg</p>
+            <p>Costela <span class="line"></span> R$ R$ 25/kg</p>
           </div>
-<!--           <div data-menu-item-display="2">
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
+
+          <div data-mnu-item-display="2" class="card" id="card2">
+            <p>Lombo  <span class="line"></span> R$ 35/kg</p>
+            <p>Pernil <span class="line"></span> R$ 25/kg</p>
+            <p>Costelinha <span class="line"></span> R$ 30/kg</p>
+            <p>Bacon <span class="line"></span> R$ 20/kg</p>
+            <p>Linguiça <span class="line"></span> R$ 15/kg</p>
+            <p>Copa Lombo <span class="line"></span> R$ 40/kg</p>
+            <p>Paleta <span class="line"></span> R$ 28/kg</p>
           </div>
-          <div data-menu-item-display="3">
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
+          <div data-menu-item-display="3" class="card" id="card3">
+            <p>Peito de frango <span class="line"></span> R$ 20/kg</p>
+            <p>Coxa de frango <span class="line"></span> R$ 15/kg</p>
+            <p>Sobrecoxa de frango <span class="line"></span> R$ 18/kg</p>
+            <p>Asa de frango <span class="line"></span> R$ 12/kg</p>
+            <p>Frango inteiro <span class="line"></span> R$ 8/kg</p>
+            <p>Peito de peru <span class="line"></span> R$ 50/kg</p>
+            <p>Coxa de peru <span class="line"></span> R$ 40/kg</p>
           </div>
-          <div data-menu-item-display="4">
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-            <p>Ancho <span class="line"></span> R$ 29,99</p>
-          </div> -->
+          <div data-menu-item-display="4" class="card" id="card4">
+            <p>Salmão <span class="line"></span> R$ 70/kg</p>
+            <p>Tilápia <span class="line"></span> R$ 20/kg</p>
+            <p>Bacalhau <span class="line"></span> R$ 80/kg</p>
+            <p>Pintado<span class="line"></span> R$ 60/kg</p>
+            <p>Robalo <span class="line"></span> R$ 50/kg</p>
+            <p>Atum <span class="line"></span> R$ 75/kg</p>
+            <p>Linguado <span class="line"></span> R$ 30/kg</p>
+          </div>
         </div>
       </article>
     </section>
@@ -111,7 +113,6 @@
 
     <section class="section--sobre">
       <h2 class="section__title">SOBRE</h2>
-      <div class="thumb"></div>
       <article class="section__content">
         <p>O açougue premium "Carnes Nobres" é fruto da perseverança de seu fundador, João, que começou a trabalhar em
           um açougue desde jovem e conseguiu economizar para comprar o próprio negócio. Com experiência e dedicação, ele
@@ -127,18 +128,10 @@
       <h2 class="section__title">LOCALIZAÇÃO</h2>
       <div class="thumb"></div>
       <article class="section__content">
-        <iframe width="500" height="400" frameborder="0"
-          src="https://www.bing.com/maps?&cp=-22.284073~-42.530265&lvl=16&pi=0&osid=88a21f93-96aa-4d6e-a718-ce917513ae75&v=2&sV=2&form=S00027"
-          scrolling="no">
-        </iframe>
-        <div style="white-space: nowrap; text-align: center; width: 100%; padding: 6px 0;">
-          <a id="largeMapLink" target="_blank"
-            href="https://www.bing.com/maps?cp=-24.99974967945576~2579.000015258789&amp;sty=r&amp;lvl=11&amp;FORM=MBEDLD">Exibir
-            Mapa Grande</a> &nbsp; | &nbsp;
-          <a id="dirMapLink" target="_blank"
-            href="https://www.bing.com/maps/directions?cp=-24.99974967945576~2579.000015258789&amp;sty=r&amp;lvl=11&amp;rtp=~pos.-24.99974967945576_2579.000015258789____&amp;FORM=MBEDLD">Obter
-            Trajeto</a>
-        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3646.7555970711232!2d-46.326690384609265!3d-23.933707084499297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce048008c9ee65%3A0x59c25a685f05f6dd!2sR.%20Braz%20Cubas%2C%2018%20-%20Centro%2C%20Santos%20-%20SP%2C%2011013-160!5e0!3m2!1spt-BR!2sbr!4v1670970858834!5m2!1spt-BR!2sbr"
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </article>
     </section>
 
@@ -148,17 +141,22 @@
       <h2 class="section__title">CONTATO</h2>
       <div class="thumb"></div>
       <article class="section__content">
-        <h3>Preenha os dados abaixo e mande sua solicitação</h3>
-        <form action="" method="post">
-          <label for="">Teste</label>
-          <input type="email" name="" id="">
-          <label for="">Teste</label>
-          <input type="email" name="" id="">
-          <label for="">Teste</label>
-          <input type="email" name="" id="">
-          <label for="">Teste</label>
-          <input type="email" name="" id="">
+        <div>
+          <h3>Preenha os dados abaixo e mande sua solicitação</h3>
+          <form action="" method="post">
+            <label for="name">Digite seu Nome:</label>
+            <input type="text" name="name" id="name">
+            <label for="telefone">Digite seu telefone:</label>
+            <input type="tel" name="telefone" id="telefone">
+            <label for="email">Digite seu E-mail:</label>
+            <input type="email" name="email" id="email">
+        </div>
+        <div>
+          <label for="solicitacao">Digite aqui a sua solicitação:</label>
+          <textarea name="solicitacao" id="solicitacao" cols="30" rows="5" title="solicitação"
+            style="resize: none;"></textarea>
           <button type="submit">Enviar</button>
+        </div>
         </form>
       </article>
     </section>
