Mudança texto card Carnes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div data-menu-item-display="3" class="card" id="card3">
             <p>Peito de frango <span class="line"></span> R$ 20/kg</p>
             <p>Coxa de frango <span class="line"></span> R$ 15/kg</p>
-            <p>Sobrecoxa de frango <span class="line"></span> R$ 18/kg</p>
+            <p>Sobrecoxa (frango) <span class="line"></span> R$ 18/kg</p>
             <p>Asa de frango <span class="line"></span> R$ 12/kg</p>
             <p>Frango inteiro <span class="line"></span> R$ 8/kg</p>
             <p>Peito de peru <span class="line"></span> R$ 50/kg</p>
