Correção HTML - Mudança no errado empresa

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
     <section class="section--sobre">
       <h2 class="section__title">SOBRE</h2>
       <article class="section__content">
-        <p>O açougue premium "Carnes Nobres" é fruto da perseverança de seu fundador, João, que começou a trabalhar em
+        <p>O açougue premium "Delicias da Carne" é fruto da perseverança de seu fundador, João, que começou a trabalhar em
           um açougue desde jovem e conseguiu economizar para comprar o próprio negócio. Com experiência e dedicação, ele
           conquistou a confiança dos clientes e se destacou pela qualidade dos produtos e atendimento personalizado.
-          Hoje, "Carnes Nobres" é reconhecido em toda a região pela excelência de seus produtos e é um exemplo de
+          Hoje, "Delicias da Carne" é reconhecido em toda a região pela excelência de seus produtos e é um exemplo de
           superação e sucesso empresarial.</p>
       </article>
     </section>
